# kraken-project

./: .editorconfig  .env  .gitignore  CLA.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Changelog.md  README.md  SECURITY.md  Vagrantfile  deny.toml  docker-compose-dev.yml  docker-compose.yml  tools.py  versions.json
0.1.1/: 404.html  (+2 more)
kraken/: Cargo.toml  Makefile.toml  build.rs
kraken-proto/: Cargo.toml  build.rs
kraken-proto/proto/: attacks.proto  attacks.shared.proto
kraken-proto/src/: convert.rs  lib.rs  mitre.rs
kraken/migrations/: 0001_initial.toml  0002_aggregation_source.toml  0002_dnstxtattack.toml  0002_oauthdecision.toml  0002_placeholder.toml  0002_workspace_access_token.toml  0002_workspace_member.toml  0003_leech_api_key.toml  0003_new_dns_txt_scan.toml  0003_placeholder.toml  0003_testssl.toml  0004_missing_cascades.toml  0004_placeholder.toml  0004_testssl.toml  0005_longer_comments.toml  0005_placeholder.toml  0006_findings.toml  0007_convert_tcp_scan.toml  0008_delete_tcpportscanresult.toml  0009_placeholder.toml  0009_service_protocols.toml  0010_osdetection.toml  0011_added_mediafile.toml  0011_workspace_notes.toml  0012_added_mediafile.toml  0013_tweaked_findings.toml  0014_tweaked_finding_details.toml  0015_finding_category.toml  0016_http_service.toml  0017_fix_finding_category.toml  0017_tweaked_finding_category.toml  0018_bearer_token.toml  0019_export_details.toml  0020_finding_factory_entry.toml  0020_testssl.toml  0021_testssl.toml  0022_finding_sorting_weight.toml  0022_placeholder.toml  0023_placeholder.toml  0024_placeholder.toml
kraken/src/: config.rs  lib.rs  main.rs
kraken/src/api/: extractors.rs  mod.rs  server.rs  swagger.rs
kraken/src/api/handler/: aggregation_source.rs  api_keys.rs  apikeys.rs  attack_results.rs  attacks.rs  auth.rs  data_export.rs  domains.rs  global_tags.rs  hosts.rs  leeches.rs  mod.rs  oauth.rs  oauth_applications.rs  oauth_decisions.rs  ports.rs  reporting.rs  services.rs  settings.rs  user.rs  users.rs  websocket.rs  wordlist.rs  wordlists.rs  workspace_invitations.rs  workspace_tags.rs  workspaces.rs
kraken/src/api/middleware/: admin_required.rs  authentication_required.rs  json_extractor_error.rs  mod.rs  not_found.rs  token_required.rs
kraken/src/api/service/: mod.rs
kraken/src/chan/: dehashed_manager.rs  global.rs  mod.rs  rpc_manager.rs  settings_manager.rs  ws_manager.rs
kraken/src/chan/leech_manager/: errors.rs  mod.rs
kraken/src/chan/ws_manager/: chan.rs  mod.rs  schema.rs
kraken/src/models/: aggregation.rs  attack.rs  convert.rs  database.rs  leech.rs  max_len_str.rs  mod.rs  settings.rs  tag.rs  user.rs  workspace.rs
kraken/src/models/aggregation/: convert.rs  mod.rs  operations.rs
kraken/src/models/attack/: convert.rs  mod.rs  operations.rs  patches.rs
kraken/src/modules/: attacks.rs  media_files.rs  mod.rs  oauth.rs  raw_query.rs  tls.rs  uri.rs  user.rs  utc.rs
kraken/src/rpc/: convert.rs  definitions.rs  mod.rs  server.rs
leech/: Cargo.toml  Makefile.toml  build.rs
leech/migrations/: 0001_initial.toml  0002_new_backlog.toml
leech/probe-config/: Cargo.toml
leech/probe-config/src/: codegen.rs  generated.rs  lib.rs  main.rs  parse.rs  schema.rs
leech/res/: tcp_fingerprints_db.txt
leech/src/: config.rs  logging.rs  main.rs  utils.rs
leech/src/backlog/: mod.rs
leech/src/models/: attack.rs  backlog.rs  mod.rs
leech/src/modules/: mod.rs
leech/src/rpc/: attacks.rs  mod.rs  utils.rs
leech/ssl-errors/: Cargo.toml
leech/ssl-errors/src/: lib.rs  main.rs  native_tls.rs  reqwest.rs  tests.rs
sdk/python-sdk/: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
sdk/python-sdk/.openapi-generator/: FILES
sdk/python-sdk/docs/: AdminWorkspacesApi.md  ApiErrorResponse.md  ApiKeysApi.md  ApiStatusCode.md  AttackType.md  AttacksApi.md  AuthenticationApi.md  BruteforceSubdomainsRequest.md  BruteforceSubdomainsResultsPage.md  CertificateTransparencyEntry.md  Color.md  CreateApiKeyRequest.md  CreateAppRequest.md  CreateDomainRequest.md  CreateGlobalTagRequest.md  CreateHostRequest.md  CreateLeechRequest.md  CreatePortRequest.md  CreateServiceRequest.md  CreateUserRequest.md  CreateWordlistRequest.md  CreateWorkspaceRequest.md  CreateWorkspaceTagRequest.md  DnsResolutionRequest.md  DnsResolutionResultsPage.md  DomainCertainty.md  DomainOrNetwork.md  DomainResultsPage.md  DomainsApi.md  FinishRegisterRequest.md  FullApiKey.md  FullDecision.md  FullDomain.md  FullGlobalTag.md  FullHost.md  FullOauthClient.md  FullPort.md  FullQueryCertificateTransparencyResult.md  FullService.md  FullServiceDetectionResult.md  (+148 more)
sdk/python-sdk/kraken_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/python-sdk/test/: test_admin_workspaces_api.py  test_api_error_response.py  test_api_keys_api.py  test_api_status_code.py  test_attack_type.py  test_attacks_api.py  test_authentication_api.py  test_bruteforce_subdomains_request.py  test_bruteforce_subdomains_results_page.py  test_certificate_transparency_entry.py  test_color.py  test_create_api_key_request.py  test_create_app_request.py  test_create_domain_request.py  test_create_global_tag_request.py  test_create_host_request.py  test_create_leech_request.py  test_create_port_request.py  test_create_service_request.py  test_create_user_request.py  test_create_wordlist_request.py  test_create_workspace_request.py  test_create_workspace_tag_request.py  test_dns_resolution_request.py  test_dns_resolution_results_page.py  test_domain_certainty.py  test_domain_results_page.py  test_domains_api.py  test_finish_register_request.py  test_full_api_key.py  test_full_decision.py  test_full_domain.py  test_full_global_tag.py  test_full_host.py  test_full_oauth_client.py  test_full_port.py  test_full_query_certificate_transparency_result.py  test_full_service.py  test_full_service_detection_result.py  test_full_wordlist.py  (+146 more)
sdk/rust-kraken-sdk/: Cargo.toml  README.md
sdk/rust-kraken-sdk/examples/: everything.rs
sdk/rust-kraken-sdk/src/: error.rs  lib.rs
(+970 files in other folders)
