[package]
name = "kraken-proto"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "AGPL-3.0"
repository = "https://github.com/myOmikron/kraken-project"
description = "Protobuf declarations used by the kraken-project"

[dependencies]
ipnetwork = "0.20"
thiserror = "1"
tonic = { version = "~0.10", features = ["transport", "tls"] }
prost = { version = "~0.12" }
prost-types = { version = "~0.12" }

[build-dependencies]
tonic-build = { version = "~0.10" }
