[package]
name = "leech"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "AGPL-3.0"
repository = "https://github.com/myOmikron/kraken-project"
description = "The worker component of kraken-project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kraken-proto = { path = "../kraken-proto" }

# Cli parser
clap = { version = "~4", features = ["derive"] }
# regex library
regex = { version = ">=1.5.5" }

ipnetwork = { version = "~0.20" }

# Logging facade
log = { version = "~0.4" }
# Logging framework for `execute` command
env_logger = { version = "~0.11" }
# Logging framework for `server` command
log4rs = { version = "~1", features = ["gzip"] }
uuid = { version = "~1", features = ["v4"] }
byte-unit = { version = "~5", features = ["serde"] }

# Async runtime
tokio = { version = ">=1.23.1", features = ["macros", "sync", "rt-multi-thread", "net", "time"] }
# Abstractions for async programming
futures = { version = "~0.3" }
# Tokio streams
tokio-stream = { version = "~0.1" }

# Expansion of the Iterator trait
itertools = { version = "~0.12" }

# gRPC implementation
tonic = { version = "~0.11", features = ["transport", "tls"] }
# codegenerator
prost = { version = "~0.12" }
prost-types = { version = "~0.12" }

# Serialization library
serde = { version = "~1", features = ["derive"] }
toml = { version = "~0.8" }
serde_json = { version = "~1" }
# Time library
chrono = { version = ">=0.4.20", default-features = false, features = ["serde"] }
# URL parsing lib
url = { version = "~2", features = ["serde"] }

# Lazy initialization
once_cell = { version = "~1" }

# RNG library
rand = { version = "~0.8" }

# Error handling
thiserror = { version = "~1" }

# ORM
rorm = { version = "~0.6", default-features = false, features = ["tokio", "rustls", "cli", "uuid", "postgres-only", "chrono"] }

# Needed because of modules

# DNS resolver
trust-dns-resolver = { version = "~0.23", features = ["dns-over-https-rustls", "tokio-rustls", "tokio"] }

# icmp library
surge-ping = { version = "~0.8" }
# increase resource limit
rlimit = { version = "~0.10" }

# http request library
reqwest = { version = "~0.11", features = ["json", "trust-dns", "rustls-tls-native-roots"] }

# dehashed api
dehashed-rs = { version = "~0.4", features = ["tokio"] }

native-tls = { version = "~0.2", features = ["alpn"] }
tokio-native-tls = { version = "~0.3" }

# raw sockets
socket2 = { version = "~0.5" }
etherparse = { version = "~0.14" }
nix = { version = "~0.28", features = ["net"] }
strum = { version = "~0.26" }
strum_macros = { version = "~0.26" }

[build-dependencies]
probe-config = { path = "probe-config" }

[features]
rorm-main = []