[package]
name = "probe-config"
version = "0.1.0"
edition = "2021"
authors = ["gammelalf <gammelalf@hopfen.space>", "Niklas Pfister <git@omikron.dev>"]
license = "AGPL-3.0"

[dependencies]
regex = { version = ">=1.5.5" }
log = { version = "~0.4" }
base64 = { version = "~0.21" }
hex = { version = "~0.4" }
