[package]
name = "probe-config"
version = "0.1.0"
edition = "2021"
authors = ["gammelalf <gammelalf@hopfen.space>", "Niklas Pfister <git@omikron.dev>"]
license = "AGPL-3.0"

[dependencies]
thiserror = "~1"
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0.9"
base64 = { version = "~0.21" }
hex = { version = "~0.4" }
