[tool.poetry]
name = "kraken_sdk"
version = "0.2.0"
description = "kraken"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/myOmikron/kraken-project"
keywords = ["OpenAPI", "OpenAPI-Generator", "kraken"]
include = ["kraken_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
