[package]
name = "kraken-sdk"
version = "0.1.0"
authors = ["git@omikron.dev"]
description = "The core component of kraken-project"
license = "AGPL-3.0"
edition = "2018"

[dependencies]
# Serialization
serde = "~1"
serde_derive = "~1"
serde_json = "~1"

# Datatypes
url = "~2"
uuid = { version = "~1", features = ["serde", "v4"] }
ipnetwork = { version = "~0.20", features = ["serde"] }
chrono = { version = ">=0.4.20", default-features = false, features = ["serde"] }

# Request library
reqwest = { version = "~0.11", features = ["json", "multipart"] }